--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "alpinejs": "^3.14.8"
+        "alpinejs": "^3.14.8",
+        "material-icons": "^1.13.13"
     }
 }
